Fix dark mode button in light mode

--- a/style.css
+++ b/style.css
@@ -61,22 +61,31 @@ button.dark-mode-toggle {
     padding: 10px 15px;
     cursor: pointer;
     border-radius: 5px;
-    transition: background-color 0.3s, transform 0.2s;
+    transition: background-color 0.3s, transform 0.2s, border 0.3s, box-shadow 0.3s;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 button.dark-mode-toggle:hover {
     background-color: #ff9800;
+    border-color: #ff9800;
     transform: scale(1.1);
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
 }
 
 .dark-mode button.dark-mode-toggle {
     background-color: #444;
+    border: 2px solid #777;
+    box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.1);
+}
+
+.dark-mode button.dark-mode-toggle:hover {
+    background-color: #ff9800;
+    border-color: #ff9800;
+    box-shadow: 2px 2px 8px rgba(255, 255, 255, 0.3);
 }
 
 section {
-
     margin: 1rem auto;
-
 }
 
 section h2 {
